k8s/keyexchange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyexchange-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keyexchange
  template:
    metadata:
      labels:
        app: keyexchange
    spec:
      containers:
        - name: keyexchange
          image: keyexchange:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
