k8s/login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
        - name: login
          image: login:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
