k8s/messaging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
  template:
    metadata:
      labels:
        app: messaging
    spec:
      containers:
        - name: messaging
          image: messaging:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
