k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app.kubernetes.io/name: grafana
