k8s/keyexchange-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keyexchange
spec:
  selector:
    app: keyexchange
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 32002
  type: NodePort
