k8s/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  selector:
    app: login
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32001
  type: NodePort
