k8s/messaging-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging
spec:
  selector:
    app: messaging
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 32003
  type: NodePort
