k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
