k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://chat-app.local"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: chat-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
#          - path: /login
#            pathType: Prefix
#            backend:
#              service:
#                name: login
#                port:
#                  number: 8080
#          - path: /keyexchange
#            pathType: Prefix
#            backend:
#              service:
#                name: keyexchange
#                port:
#                  number: 8081
#          - path: /messaging
#            pathType: Prefix
#            backend:
#              service:
#                name: messaging
#                port:
#                  number: 8082
